--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ITOO43TX01</title>
-</head>uy
+</head>
 <body>
 <h1>Uy,vanes aaron a.</h1>
 <h2>202310503 bsitagd</h2>
-<p></p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi alias dolore veniam consectetur dolorem exercitationem soluta, ratione necessitatibus, iure natus vel quod autem est beatae repellendus ea nemo animi magnam.</p>
 </body>
 </html>
