--- a/fake.html
+++ b/fake.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Character Briefer</title>
-    <link rel="stylesheet" href="tsa6.css">
+    <link rel="stylesheet" href="">
 </head>
 <body>
     <body class="grid-container">
